--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <input type="text" placeholder="ingrese el nombre de la ciudad" spellcheck="false">
             <button><img src="images/search.png"></button>
         </div>
-
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
             <h1 class="temp">22°c</h1>
@@ -22,15 +24,15 @@
             <div class="details">
                 <div class="col">
                     <img src="images/humidity.png" alt="">
-                    <div class="humidity">
-                        <p>50%</p>
+                    <div>
+                        <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
                     <img src="images/wind.png" alt="">
-                    <div class="wind">
-                        <p>15 km/h</p>
+                    <div>
+                        <p class="wind">15 km/h</p>
                         <p>Wind</p>
                     </div>
                 </div>
@@ -44,23 +46,52 @@
         const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&lang=es&q=";
         const searchBox = document.querySelector(".search input");
         const searchBtn = document.querySelector(".search button");
+        const weatherIcon = document.querySelector(".weather-icon");
 
         async function checkWeather(city) {
             const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
-            var data = await response.json();
 
-            console.log(data);
+            if (response.status == 404) {
+                document.querySelector(".error").style.display = "block";
+                document.querySelector(".weathger").style.display = "none";
+                return;
+            } else {
+                var data = await response.json();
 
-            document.querySelector(".city").innerHTML = data.name;
-            document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
-            document.querySelector(".weather-icon").src = "http://openweathermap.org/img/wn/" + data.weather[0].icon + ".png";
-            document.querySelector(".humidity p:first-child").innerHTML = data.main.humidity + "%";
-            document.querySelector(".wind p:first-child").innerHTML = data.wind.speed + " km/h";
+                document.querySelector(".city").innerHTML = data.name;
+                document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+                document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+                document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
 
+                if (data.weather[0].main == "Clouds") {
+                    weatherIcon.src = "images/clouds.png";
+                }
+                else if (data.weather[0].main == "Clear") {
+                    weatherIcon.src = "images/clear.png";
+                }
+                else if (data.weather[0].main == "Rain") {
+                    weatherIcon.src = "images/rain.png";
+                }
+                else if (data.weather[0].main == "Drizzle") {
+                    weatherIcon.src = "images/drizzle.png";
+                }
+                else if (data.weather[0].main == "Mist") {
+                    weatherIcon.src = "images/Mist.png";
+                }
+
+                document.querySelector(".weather").style.display = "block"
+                document.querySelector(".error").style.display = "none";
+            }
         }
 
         searchBtn.addEventListener("click", () => {
             checkWeather(searchBox.value);
+        });
+        //add keyboard enter listener
+        searchBox.addEventListener("keyup", (e) => {
+            if (e.keyCode === 13) {
+                checkWeather(searchBox.value);
+            }
         });
 
     </script>
