Se carga la apikey luego del DOM

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     <script>
 
         const apiKey = "c310d536fef2101788eaf943f8e7b5cf";
+
+        window.addEventListener('DOMContentLoaded', (event) => {
+            const apiKey = "c310d536fef2101788eaf943f8e7b5cf";
+        });
+
+
+
         const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&lang=es&q=";
         const searchBox = document.querySelector(".search input");
         const searchBtn = document.querySelector(".search button");
