--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     <img src="images/humidity.png" alt="">
                     <div>
                         <p class="humidity">50%</p>
-                        <p>Humidity</p>
+                        <p>Humedad</p>
                     </div>
                 </div>
                 <div class="col">
                     <img src="images/wind.png" alt="">
                     <div>
                         <p class="wind">15 km/h</p>
-                        <p>Wind</p>
+                        <p>Viento</p>
                     </div>
                 </div>
             </div>
